update for index and css(style)

--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html>
 <head>
 	<title>quick sample</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Hello world</h1>
-<h2>editable section</h2>
-<h3>Third section</h3>
+	<section class="main-content">
+		<h1>Process updates</h1>
+		<p>Lorem ipsum</p>
+	</section>
+	<section class="feature-section">
+		<h1>Features and news</h1>
+		<ul>
+			<li>Trending</li>
+			<li>Showbiz</li>
+			<li>Sports</li>
+			<li>Politics</li>
+		</ul>
+	</section>
 </body>
 </html>
