--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<section class="main-content">
 		<h1>Process updates</h1>
 		<p>Lorem ipsum</p>
+		<p>Lorem ipsum</p>
+		<p>Lorem ipsum</p>
 	</section>
 	<section class="feature-section">
 		<h1>Features and news</h1>
@@ -18,5 +20,6 @@
 			<li>Politics</li>
 		</ul>
 	</section>
+
 </body>
 </html>
