--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<section class="main-content">
 		<h1>Process updates</h1>
 		<p>Lorem ipsum</p>
+		<p>Welcome to my simple website</p>
 	</section>
 	<section class="feature-section">
 		<h1>Features and news</h1>
