--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
 <body>
 	<section class="main-content">
 		<h1>Process updates</h1>
-		<p>Lorem ipsum</p>
-		<p>Lorem ipsum</p>
-		<p>Lorem ipsum</p>
 		<p>Welcome to my simple website</p>
+		<p>please read the articles</p>
 	</section>
 	<section class="feature-section">
 		<h1>Features and news</h1>
